<resources>
    <string name="app_name">GymApp</string>
    <string name="login">Fitness Link</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="if_you_don_t_have_an_account_yet_click_here">If you don\'t have an account yet, SIGN UP HERE</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome_user">Welcome User</string>
    <string name="log_out">Log Out</string>
    <string name="logoslika">logoslika</string>
    <string name="usercreated">usercreated</string>
    <string name="mario_antolovic">Mario Antolovic</string>
    <string name="links_500">Links: 500</string>
    <string name="_2000_caloies_burned_today">2000 Caloies Burned Today</string>
    <string name="body_mass_index_20">Body Mass Index 20%</string>
    <string name="fat_percentage_13">Fat Percentage</string>
    <string name="weight_78kg_height_1_80_m">Weight: 78Kg. Height: 1.80 m.</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="weight">Weight</string>
    <string name="_180_lbs">180 lbs.</string>
    <string name="avg_cals_exp">Avg. Cals Exp.</string>
    <string name="_1600">1600</string>
    <string name="bmi">BMI</string>

    <string name="bmig">BMI</string>
    <string name="Height">Height</string>
    <string name="_180cm">180cm</string>
</resources>
