<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pozadina"
        tools:context=".Activities.RegisterActivity">

    <EditText
            android:id="@+id/edt_fullname"
            android:background="@drawable/round_edt_style"
            android:hint="@string/full_name"
            android:paddingLeft="20dp"
            android:layout_width="337dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.494"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFamily="@font/muli_extralight"
            android:textStyle="bold"
            android:textColorHint="@android:color/background_light"/>

    <EditText
            android:id="@+id/edt_email"
            android:background="@drawable/round_edt_style"
            android:hint="@string/email"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_fullname"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:textColorHint="@android:color/background_light"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/muli_extralight"/>

    <EditText
            android:id="@+id/edt_password"
            android:background="@drawable/round_edt_style"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:textColorHint="@android:color/background_light"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/muli_extralight"/>

    <EditText
            android:id="@+id/edt_password2"
            android:background="@drawable/round_edt_style"
            android:hint="@string/confirm_password"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/muli_extralight"/>

    <Button
            android:id="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/edt_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:background="@drawable/round_btn_style"
            android:text="@string/register"
            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_how_to_reg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/usercreated"/>


</android.support.constraint.ConstraintLayout>

