<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pozadina"
        tools:context=".Activities.MainActivity">

    <Button
            android:id="@+id/profile_btn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/round_edt_style"
            android:text="@string/go_to_profile"
            app:layout_constraintBottom_toTopOf="@+id/logout_btn"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintVertical_bias="0.911"/>

    <Button
            android:id="@+id/logout_btn"

            android:layout_width="349dp"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/round_edt_style"
            android:text="@string/log_out"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.521"/>

    <ImageView
            android:layout_width="176dp"
            android:layout_height="116dp"
            app:srcCompat="@drawable/logo_transparent"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logoslika"/>

</android.support.constraint.ConstraintLayout>