<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pozadina"
        tools:context=".Activities.ProfileActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:id="@+id/main_card"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="14dp"
            app:cardBackgroundColor="@color/pozadina"
            tools:layout_editor_absoluteX="5dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@color/pozadina">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:civ_border_width="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/android_profile"
                    />

            <TextView
                    android:id="@+id/name"
                    android:layout_width="319dp"
                    android:layout_height="54dp"
                    android:textSize="24sp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@id/profile_image"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/mario_antolovic"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"
                    app:layout_constraintHorizontal_bias="0.369"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/main_card"
            android:id="@+id/links_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/pozadina"
            tools:layout_editor_absoluteX="5dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/links_500"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"
                    android:id="@+id/back"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/links_card"
            android:id="@+id/caloies_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="5dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pozadina">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/_2000_caloies_burned_today"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/caloies_card"
            android:id="@+id/bmi_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            android:layout_marginTop="10dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pozadina">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/body_mass_index_20"
                    android:textColorLink="@android:color/background_light"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/bmi_card"
            android:id="@+id/fatp_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            android:layout_marginTop="10dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pozadina">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/fat_percentage_13"
                    android:textColorLink="@android:color/background_light"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/fatp_card"
            android:id="@+id/wh_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            android:layout_marginTop="396dp"
            tools:layout_editor_absoluteX="-41dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pozadina">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/weight_78kg_height_1_80_m"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/round_edt_style"
                    android:fontFamily="@font/muli_extralight"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>