<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/pozadina">

    <EditText
            android:id="@+id/edt_username"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:paddingLeft="20dp"
            android:background="@drawable/round_edt_style"
            android:inputType="textEmailAddress"
            android:hint="username"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/muli_extralight"
            android:textColorHint="@android:color/background_light"/>

    <EditText
            android:id="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_username"
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edt_style"
            android:inputType="textPassword"
            android:hint="password"
            android:textColor="@android:color/background_light"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/muli_extralight"
            android:textColorHint="@android:color/background_light"/>

    <Button
            android:id="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:background="@drawable/round_edt_style"

            android:text="@string/sign_in"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="20dp"/>

    <TextView
            android:id="@+id/txt_password_link"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:text="@string/forgot_password"
            android:textSize="18sp"/>

    <TextView
            app:layout_constraintTop_toBottomOf="@+id/txt_password_link"
            android:id="@+id/txt_link"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_don_t_have_an_account_yet_click_here"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            android:fontFamily="@font/muli_extralight"/>

    <ImageView
            android:layout_width="211dp"
            android:layout_height="117dp"
            app:srcCompat="@drawable/logo_transparent"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>